--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fcfcfc;
 }
 
 .App-logo {
@@ -35,4 +41,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1 {
+  text-align: center; 
 }
