--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -3,9 +3,25 @@
   height: 100vh;
   width: 100%;
   display: flex;
+  flex-direction: column; 
   align-items: center;
   justify-content: center;
   background-color: #fcfcfc;
+  position: relative;
+}
+
+.test-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1; /* Ensure the text appears above the dropdowns */
+}
+
+.dropdowns {
+  display: flex;
+  flex-direction: row;
+  align-items: center; 
 }
 
 .App-logo {
