--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -10,19 +10,23 @@
   position: relative;
 }
 
-.test-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1; /* Ensure the text appears above the dropdowns */
-}
-
 .dropdowns {
   display: flex;
-  flex-direction: row;
-  align-items: center; 
+  flex-wrap: wrap;
+  justify-content: center; /* Center dropdowns horizontally */
+  margin-top: 20px;
+  gap: 100px; /* Add gap between dropdowns */
+  align-items: center; /* Center items vertically */
 }
+
+
+
+.dropdown {
+  margin: 0 10px; 
+  position: relative;
+}
+
+
 
 .App-logo {
   height: 40vmin;
@@ -61,4 +65,36 @@
 
 h1 {
   text-align: center; 
+}
+
+.dropdown button {
+  background-color: #4CAF50; /* Green background */
+  color: white; /* White text */
+  padding: 10px 15px; /* Add some padding */
+  font-size: 16px; /* Increase font size */
+  border: none; /* Remove border */
+  cursor: pointer; /* Add cursor pointer */
+  width: 150px;
+}
+
+.dropdown ul {
+  list-style-type: none; /* Remove bullet points */
+  padding: 0; /* Remove default padding */
+  margin: 0; /* Remove default margin */
+  border: 1px solid #ccc; /* Add border */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); /* Add box shadow */
+  background-color: #f1f1f1; /* Light gray background */
+  position: absolute;
+  width: 150px; /* Set fixed width */
+  overflow: auto; /* Add overflow auto */
+  max-height: 150px; /* Set max height */
+}
+
+.dropdown ul li {
+  padding: 12px 16px; /* Add padding to each option */
+  cursor: pointer; /* Add cursor pointer */
+}
+
+.dropdown ul li:hover {
+  background-color: #ddd; /* Light gray background */
 }
